Still on the index

--- a/admin/index.html
+++ b/admin/index.html
@@ -11,6 +11,136 @@
   <script src="script.js"></script>
 
 </head>
+<!--
+Owner should be able to add and set prices
+**Change prices & WQtys
+View Inventory (Prod & Qtys)
+
+ -->
+
+<!-- View Inventory -->
+ <div data-role="page" id="stockpage" data-theme="a">
+<!-- header -->
+ <div data-role="header">
+ <h1>Inventory</h1>
+ <!-- navbar -->
+<div data-role="navbar">
+  <ul>
+    <li>
+      <a href="#stockpage" data-icon="bullets" data-transition="slidedown">
+        Stock
+      </a>
+    </li>
+    <li>
+      <a href="#addpage" data-icon="plus" data-transition="slidedown" onclick="">
+        Add Product
+      </a>
+    </li>
+    <li>
+      <a href="#updatepage" data-icon="edit" data-transition="slidedown">
+        Update
+      </a>
+    </li>
+  </ul>
+</div><!-- /navbar -->
+ </div><!-- /header -->
+
+<!-- content -->
+ <div role="main" class="ui-content">
+1
+ <ul data-role="listview" data-inset="true" id="product_list_ul" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
+ </ul>
+
+ </div><!-- /content -->
+
+<!-- footer -->
+ <div data-role="footer">
+   <h1>Made With Love in Berekuso</h1>
+ </div><!-- /footer -->
+</div><!-- /Inventory -->
+
+<!-- Add Product -->
+ <div data-role="page" id="addpage" data-theme="a">
+<!-- header -->
+ <div data-role="header">
+ <h1>Inventory</h1>
+ <!-- navbar -->
+<div data-role="navbar">
+  <ul>
+    <li>
+      <a href="#stockpage" data-icon="bullets" data-transition="slidedown">
+        Stock
+      </a>
+    </li>
+    <li>
+      <a href="#addpage" data-icon="plus" data-transition="slidedown" onclick="">
+        Add Product
+      </a>
+    </li>
+    <li>
+      <a href="#updatepage" data-icon="edit" data-transition="slidedown">
+        Update
+      </a>
+    </li>
+  </ul>
+</div><!-- /navbar -->
+ </div><!-- /header -->
+
+<!-- content -->
+ <div role="main" class="ui-content">
+2
+ <ul data-role="listview" data-inset="true" id="product_list_ul" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
+ </ul>
+
+ </div><!-- /content -->
+
+<!-- footer -->
+ <div data-role="footer">
+   <h1>Made With Love in Berekuso</h1>
+ </div><!-- /footer -->
+</div><!-- /Add -->
+
+
+<!-- Update Stock -->
+ <div data-role="page" id="updatepage" data-theme="a">
+<!-- header -->
+ <div data-role="header">
+ <h1>Inventory</h1>
+ <!-- navbar -->
+<div data-role="navbar">
+  <ul>
+    <li>
+      <a href="#stockpage" data-icon="bullets" data-transition="slidedown">
+        Stock
+      </a>
+    </li>
+    <li>
+      <a href="#addpage" data-icon="plus" data-transition="slidedown" onclick="">
+        Add Product
+      </a>
+    </li>
+    <li>
+      <a href="#updatepage" data-icon="edit" data-transition="slidedown">
+        Update
+      </a>
+    </li>
+  </ul>
+</div><!-- /navbar -->
+ </div><!-- /header -->
+
+<!-- content -->
+ <div role="main" class="ui-content">
+3
+ <ul data-role="listview" data-inset="true" id="product_list_ul" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
+ </ul>
+
+ </div><!-- /content -->
+
+<!-- footer -->
+ <div data-role="footer">
+   <h1>Made With Love in Berekuso</h1>
+ </div><!-- /footer -->
+</div><!-- /Update -->
 
 <body>
 
