--- a/admin/index.html
+++ b/admin/index.html
@@ -44,7 +44,6 @@ View Inventory (Prod & Qtys)
   </ul>
 </div><!-- /navbar -->
  </div><!-- /header -->
-
 <!-- content -->
  <div role="main" class="ui-content">
 
@@ -134,39 +133,26 @@ View Inventory (Prod & Qtys)
   </ul>
 </div><!-- /navbar -->
  </div><!-- /header -->
-
 <!-- content -->
  <div role="main" class="ui-content">
-
      <div style="padding:10px 20px;">
-
        <h3>Please input the product details</h3>
-
        <label for="name" class="ui-hidden-accessible">Name:</label>
        <input type="number" name="name" id="add_prod_name_display" value="" placeholder="price" data-theme="a">
-
        <label for="barcode" class="ui-hidden-accessible">Barcode:</label>
        <input type="number" name="barcode" id="add_prod_id_display" value="" placeholder="barcode" data-theme="a">
-
        <label for="price" class="ui-hidden-accessible">Price:</label>
        <input type="number" name="price" id="add_prod_price_display" value="" placeholder="price" data-theme="a">
-
        <label for="quantity" class="ui-hidden-accessible">Quantity:</label>
        <input type="number" name="quantity" id="add_prod_quantity_display" value="" placeholder="quantity" data-theme="a">
-
-       <a href="" id="addtostockbtn" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-btn-icon-left ui-icon-check" data-rel="" role="button">Add to Stock</a>
-
+       <a href="" id="add_to_stock_btn" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-btn-icon-left ui-icon-check" data-rel="" role="button">Add to Stock</a>
      </div>
-
-
  </div><!-- /content -->
-
 <!-- footer -->
  <div data-role="footer">
    <h1>Made With Love in Berekuso</h1>
  </div><!-- /footer -->
 </div><!-- /Add -->
-
 
 <!-- Update Stock -->
  <div data-role="page" id="updatepage" data-theme="a">
@@ -194,29 +180,20 @@ View Inventory (Prod & Qtys)
   </ul>
 </div><!-- /navbar -->
  </div><!-- /header -->
-
 <!-- content -->
  <div role="main" class="ui-content">
-
    <div style="padding:10px 20px;">
-
      <h3>Please enter the product to edit</h3>
-
      <label for="barcode" class="ui-hidden-accessible">Barcode:</label>
      <input type="number" name="barcode" id="update_prod_id_display" value="" placeholder="barcode" data-theme="a">
-
-     <a href="#updatedetailspage" id="addtostockbtn" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-btn-icon-left ui-icon-check" data-rel="" role="button">Add to Stock</a>
-
+     <a href="#updatedetailspage" id="update_prod_by_id_btn" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-btn-icon-left ui-icon-check" data-rel="" role="button">Add to Stock</a>
    </div>
-
  </div><!-- /content -->
-
 <!-- footer -->
  <div data-role="footer">
    <h1>Made With Love in Berekuso</h1>
  </div><!-- /footer -->
 </div><!-- /Update -->
-
 
 <!-- Update Stock Details -->
  <div data-role="page" id="updatedetailspage" data-theme="a">
@@ -244,29 +221,19 @@ View Inventory (Prod & Qtys)
   </ul>
 </div><!-- /navbar -->
  </div><!-- /header -->
-
 <!-- content -->
  <div role="main" class="ui-content">
-
    <div style="padding:10px 20px;">
-
      <h3>Please input the product details</h3>
-
      <label for="barcode" class="ui-hidden-accessible">Barcode:</label>
-     <input type="number" name="barcode" id="update_prod_id_display" value="" placeholder="barcode" data-theme="a">
-
+     <input type="number" name="barcode" id="update_details_id_display" value="" placeholder="barcode" data-theme="a">
      <label for="price" class="ui-hidden-accessible">Price:</label>
-     <input type="number" name="price" id="update_prod_price_display" value="" placeholder="price" data-theme="a">
-
+     <input type="number" name="price" id="update_details_price_display" value="" placeholder="price" data-theme="a">
      <label for="quantity" class="ui-hidden-accessible">Quantity:</label>
-     <input type="number" name="quantity" id="update_prod_quantity_display" value="" placeholder="quantity" data-theme="a">
-
-     <a href="#updatepage" id="addtostockbtn" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-btn-icon-left ui-icon-check" data-rel="" role="button">Add to Stock</a>
-
+     <input type="number" name="quantity" id="update_details_quantity_display" value="" placeholder="quantity" data-theme="a">
+     <a href="#updatepage" id="update_porduct_btn" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-btn-icon-left ui-icon-check" data-rel="" role="button">Add to Stock</a>
    </div>
-
  </div><!-- /content -->
-
 <!-- footer -->
  <div data-role="footer">
    <h1>Made With Love in Berekuso</h1>
