Added add functionality to action.php and index.js for admin

--- a/admin/index.html
+++ b/admin/index.html
@@ -138,7 +138,7 @@ View Inventory (Prod & Qtys)
      <div style="padding:10px 20px;">
        <h3>Please input the product details</h3>
        <label for="name" class="ui-hidden-accessible">Name:</label>
-       <input type="number" name="name" id="add_prod_name_display" value="" placeholder="price" data-theme="a">
+       <input type="text" name="name" id="add_prod_name_display" value="" placeholder="name" data-theme="a">
        <label for="barcode" class="ui-hidden-accessible">Barcode:</label>
        <input type="number" name="barcode" id="add_prod_id_display" value="" placeholder="barcode" data-theme="a">
        <label for="price" class="ui-hidden-accessible">Price:</label>
