Done PHP code for get all products in ajax-action.php

--- a/admin/index.html
+++ b/admin/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <!--
-Owner should be able to add and set prices
+Owner should be able to add and set prices - DONE
 **Change prices & WQtys
 View Inventory (Prod & Qtys)
 
