minor change to button labels

--- a/admin/index.html
+++ b/admin/index.html
@@ -96,7 +96,7 @@ View Inventory (Prod & Qtys)
        <input type="number" name="price" id="add_prod_price_display" value="" placeholder="price" data-theme="a">
        <label for="quantity" class="ui-hidden-accessible">Quantity:</label>
        <input type="number" name="quantity" id="add_prod_quantity_display" value="" placeholder="quantity" data-theme="a">
-       <a href="" id="add_to_stock_btn" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-btn-icon-left ui-icon-check" data-rel="" role="button">Add to Stock</a>
+       <a href="" id="add_to_stock_btn" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-btn-icon-left ui-icon-plus" data-rel="" role="button">Add to Stock</a>
      </div>
  </div><!-- /content -->
 <!-- footer -->
@@ -137,7 +137,7 @@ View Inventory (Prod & Qtys)
      <h3>Please enter the product to edit</h3>
      <label for="barcode" class="ui-hidden-accessible">Barcode:</label>
      <input type="number" name="barcode" id="update_prod_id_display" value="" placeholder="barcode" data-theme="a">
-     <a href="#updatedetailspage" id="update_prod_by_id_btn" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-btn-icon-left ui-icon-check" data-rel="" role="button">Add to Stock</a>
+     <a href="#updatedetailspage" id="update_prod_by_id_btn" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-btn-icon-left ui-icon-check" data-rel="" role="button">Update This Product</a>
    </div>
  </div><!-- /content -->
 <!-- footer -->
@@ -182,7 +182,7 @@ View Inventory (Prod & Qtys)
      <input type="number" name="price" id="update_details_price_display" value="" placeholder="price" data-theme="a">
      <label for="quantity" class="ui-hidden-accessible">Quantity:</label>
      <input type="number" name="quantity" id="update_details_quantity_display" value="" placeholder="quantity" data-theme="a">
-     <a href="#updatepage" id="update_porduct_btn" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-btn-icon-left ui-icon-check" data-rel="" role="button">Add to Stock</a>
+     <a href="#updatepage" id="update_porduct_btn" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-btn-icon-left ui-icon-check" data-rel="" role="button">Save Changes</a>
    </div>
  </div><!-- /content -->
 <!-- footer -->
