--- a/admin-desktop/index.html
+++ b/admin-desktop/index.html
@@ -1,67 +1,107 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="A layout example that shows off a blog page with a list of posts.">
 
-        <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/script.css">
+    <title>Blog &ndash; Layout Examples &ndash; Pure</title>
 
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
 
-        <div class="header-container">
-            <header class="wrapper clearfix">
-                <h1 class="title">Inventory</h1>
-                <nav>
+
+
+<link rel="stylesheet" href="css/pure-min.css">
+
+
+
+<!--[if lte IE 8]>
+
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-old-ie-min.css">
+
+<![endif]-->
+<!--[if gt IE 8]><!-->
+
+    <link rel="stylesheet" href="css/grids-responsive-min.css">
+
+<!--<![endif]-->
+
+
+
+
+
+
+    <!--[if lte IE 8]>
+        <link rel="stylesheet" href="css/layouts/layout-old-ie.css">
+    <![endif]-->
+    <!--[if gt IE 8]><!-->
+        <link rel="stylesheet" href="css/layouts/layout.css">
+    <!--<![endif]-->
+
+
+
+
+
+
+
+</head>
+<body>
+
+
+
+
+
+
+
+<div id="layout" class="pure-g">
+    <div class="sidebar pure-u-1 pure-u-md-1-4">
+        <div class="header">
+            <h1 class="brand-title">Inventory</h1>
+            <h2 class="brand-tagline">Shop management</h2>
+
+
+        </div>
+<br><br><br>
+
+
+
+    </div>
+
+    <div class="content pure-u-1 pure-u-md-3-4">
+
+        <div align="right" class="pure-menu pure-menu-horizontal">
+    <a href="#" class="pure-menu-heading pure-menu-link">Home</a>
+    <ul class="pure-menu-list">
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Add Products</a></li>
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Update Stock</a></li>
+
+    </ul>
+</div>
+        <div>
+            <!-- A wrapper for all the blog posts -->
+
+
+            <div class="posts">
+                <h1 class="content-subhead">Recent Posts</h1>
+
+
+
+            <div class="footer">
+                <div class="pure-menu pure-menu-horizontal">
                     <ul>
-                        <li><a href="#">Stock</a></li>
-                        <li><a href="#">Add Product</a></li>
-                        <li><a href="#">Update Stock</a></li>
+                        <li class="pure-menu-item"><a href="http://purecss.io/" class="pure-menu-link">About</a></li>
+                        <li class="pure-menu-item"><a href="http://twitter.com/yuilibrary/" class="pure-menu-link">Twitter</a></li>
+                        <li class="pure-menu-item"><a href="http://github.com/yahoo/pure/" class="pure-menu-link">GitHub</a></li>
                     </ul>
-                </nav>
-            </header>
+                </div>
+            </div>
         </div>
-
-        <div class="main-container">
-            <div class="main wrapper clearfix">
-
-              <!-- View Inventory -->
-               <div data-role="page" id="stockpage" data-theme="a">
-
-              <!-- content -->
-               <div role="main" class="ui-content">
-
-               <ul data-role="listview" data-inset="true" id="product_list_ul" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
-               </ul>
-
-               </div><!-- /content -->
+    </div>
+</div>
 
 
 
-            </div> <!-- #main -->
-        </div> <!-- #main-container -->
 
-        <div class="footer-container">
-            <footer class="wrapper">
-                <h3>Made With Love in Berekuso</h3>
-            </footer>
-        </div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
-        <script src="js/main.js"></script>
-    </body>
+</body>
 </html>
