--- a/admin-desktop/index.html
+++ b/admin-desktop/index.html
@@ -2,104 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="A layout example that shows off a blog page with a list of posts.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A portal to view and manage a shop's inventory.">
 
-    <title>Blog &ndash; Layout Examples &ndash; Pure</title>
-
-
-
-
-<link rel="stylesheet" href="css/pure-min.css">
-
-<script src="js/vendor/jquery-2.1.4.min.js"></script>
-<script src="js/script.js"></script>
+    <title>Inventory &ndash; Shop Management</title>
+    <link rel="stylesheet" href="css/pure-min.css">
+    <script src="js/vendor/jquery-2.1.4.min.js"></script>
+    <script src="js/script.js"></script>
 
 <!--[if lte IE 8]>
-
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-old-ie-min.css">
-
 <![endif]-->
 <!--[if gt IE 8]><!-->
-
     <link rel="stylesheet" href="css/grids-responsive-min.css">
-
 <!--<![endif]-->
 
-
-
-
-
-
-    <!--[if lte IE 8]>
-        <link rel="stylesheet" href="css/layouts/layout-old-ie.css">
-    <![endif]-->
-    <!--[if gt IE 8]><!-->
-        <link rel="stylesheet" href="css/layouts/layout.css">
-    <!--<![endif]-->
-
-
-
-
-
-
+<!--[if lte IE 8]>
+    <link rel="stylesheet" href="css/layouts/layout-old-ie.css">
+<![endif]-->
+<!--[if gt IE 8]><!-->
+    <link rel="stylesheet" href="css/layouts/layout.css">
+<!--<![endif]-->
 
 </head>
 <body>
-
-
-
-
-
-
-
 <div id="layout" class="pure-g">
     <div class="sidebar pure-u-1 pure-u-md-1-4">
         <div class="header">
             <h1 class="brand-title">Inventory</h1>
             <h2 class="brand-tagline">Shop management</h2>
-
-
         </div>
-<br><br><br>
-
-
-
+        <br><br><br>
     </div>
-
     <div class="content pure-u-1 pure-u-md-3-4">
-
         <div align="right" class="pure-menu pure-menu-horizontal">
-    <a href="#" class="pure-menu-heading pure-menu-link">Home</a>
-    <ul class="pure-menu-list">
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Add Products</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Update Stock</a></li>
-
-    </ul>
-</div>
+          <a href="#" class="pure-menu-heading pure-menu-link">Home</a>
+          <ul class="pure-menu-list">
+            <li class="pure-menu-item"><a href="#" class="pure-menu-link">Add Products</a></li>
+            <li class="pure-menu-item"><a href="#" class="pure-menu-link">Update Stock</a></li>
+          </ul>
+        </div>
         <div>
-            <!-- A wrapper for all the blog posts -->
-
-
+            <!-- A wrapper for all the content -->
             <div class="posts">
-                <h1 class="content-subhead" id="pagetitle">Recent Posts</h1>
-
-
-                <table class="pure-table pure-u-1-1" >
-                  <thead class="pure-table pure-u-1-1">
-                    <tr>
-                      <th class="pure-u-1-5">Product</th>
-                      <th class="pure-u-1-5">ID</th>
-                      <th class="pure-u-1-5">Price</th>
-                      <th class="pure-u-1-5">Quantity</th>
-                      <th class="pure-u-1-5">Edit</th>
-                    </tr>
-                  </thead>
-                  <tbody id="product_list_ul" class="pure-table pure-u-1-1">
-                  </tbody>
-                </table>
-
-
+                <h1 class='content-subhead' id='pagetitle'>Product List</h1>
+                  <div id="divcontent">
+                    
+                  </div>
             <div class="footer">
                 <div class="pure-menu pure-menu-horizontal">
                     <ul>
@@ -112,11 +61,5 @@
         </div>
     </div>
 </div>
-
-
-
-
-
-
 </body>
 </html>
