--- a/admin-desktop/index.html
+++ b/admin-desktop/index.html
@@ -36,10 +36,10 @@
     </div>
     <div class="content pure-u-1 pure-u-md-3-4">
         <div align="right" class="pure-menu pure-menu-horizontal">
-          <a href="#" class="pure-menu-heading pure-menu-link">Home</a>
+          <a href="#" class="pure-menu-heading pure-menu-link" id="list_porducts_btn">Home</a>
           <ul class="pure-menu-list">
-            <li class="pure-menu-item"><a href="#" class="pure-menu-link">Add Products</a></li>
-            <li class="pure-menu-item"><a href="#" class="pure-menu-link">Update Stock</a></li>
+            <li class="pure-menu-item"><a href="#" class="pure-menu-link" id="add_to_stock_menu">Add Products</a></li>
+            <li class="pure-menu-item"><a href="#" id="update_prod_by_id_btn" class="pure-menu-link">Update Stock</a></li>
           </ul>
         </div>
         <div>
@@ -47,8 +47,7 @@
             <div class="posts">
                 <h1 class='content-subhead' id='pagetitle'>Product List</h1>
                   <div id="divcontent">
-                    
-                  </div>
+
             <div class="footer">
                 <div class="pure-menu pure-menu-horizontal">
                     <ul>
