90% done. Need to change heading with page and if product not found reload enter id page

--- a/admin-desktop/index.html
+++ b/admin-desktop/index.html
@@ -38,8 +38,8 @@
         <div align="right" class="pure-menu pure-menu-horizontal">
           <a href="#" class="pure-menu-heading pure-menu-link" id="list_porducts_btn">Home</a>
           <ul class="pure-menu-list">
-            <li class="pure-menu-item"><a href="#" class="pure-menu-link" id="add_to_stock_menu">Add Products</a></li>
-            <li class="pure-menu-item"><a href="#" id="update_prod_menu" class="pure-menu-link">Update Stock</a></li>
+            <li class="pure-menu-item"><a href="#" class="pure-menu-link" id="add_to_stock_menu">ADD PRODUCTS</a></li>
+            <li class="pure-menu-item"><a href="#" id="update_prod_menu" class="pure-menu-link">UPDATE STOCK</a></li>
           </ul>
         </div>
         <div>
@@ -52,9 +52,9 @@
             <div class="footer">
                 <div class="pure-menu pure-menu-horizontal">
                     <ul>
-                        <li class="pure-menu-item"><a href="http://purecss.io/" class="pure-menu-link">About</a></li>
-                        <li class="pure-menu-item"><a href="http://twitter.com/yuilibrary/" class="pure-menu-link">Twitter</a></li>
-                        <li class="pure-menu-item"><a href="http://github.com/yahoo/pure/" class="pure-menu-link">GitHub</a></li>
+                        <li class="pure-menu-item"><a href="http://michaelannor.github.io/" class="pure-menu-link">Developer</a></li>
+                        <li class="pure-menu-item"><a href="http://ashesi.edu.gh/" class="pure-menu-link">Ashesi</a></li>
+                        <li class="pure-menu-item"><a href="http://github.com/michaelannor/mwcposterminal" class="pure-menu-link">GitHub</a></li>
                     </ul>
                 </div>
             </div>
